k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qr-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # Umieszczone w odpowiedniej sekcji
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: qr-backend-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qr-frontend-service
                port:
                  number: 3000
